--- a/css/component/_autodesk-widget.css
+++ b/css/component/_autodesk-widget.css
@@ -56,6 +56,18 @@
 
     & span:first-child {
         width: 75%;
+
+        &.--full {
+            width: 88%;
+
+            @media (max-width: 920px) {
+                width: 80%;
+            }
+        }
+
+        @media (max-width: 730px) {
+            width: 90%;
+        }
     }
 
     & span:nth-child(2) {
