--- a/css/component/_products.css
+++ b/css/component/_products.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: column;
     min-width: 100%;
-    margin-bottom: 5rem;
+    margin: 0 24px 5rem 24px;
 }
 
 .products__top {
@@ -14,105 +14,30 @@
 }
 
 .products__block {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+
     margin-bottom: 16px;
 
-    @media (max-width: 620px) {
-        flex-direction: column;
-    }
-}
+    color: #212121;
 
-.products__element-first {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-top: 59px;
-    flex-grow: 2;
+    @media (min-width: 990px) {
+        grid-template-columns: 1.7fr 1fr 1fr;
+    }
 }
 
 .products__item {
-    padding: 20px 10px;
-    border: 1px solid black;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
 
-    @media (min-width: 680px) {
-        border-right: none;
-    }
+    font-size: 14px;
+    font-weight: 600;
 
-    &:not(:last-child) {
-        border-bottom: none;
-    }
-}
+    padding: 1rem 1.25rem;
+    border: 1px solid #ccc;
 
-.products__element-second {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-
-    & .products__item {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        font-size: 14px;
-
-        padding: 20px 10px;
-        border: 1px solid black;
-
-        & img {
-            width: 2rem;
-        }
-
-        &:first-child {
-            padding: 13px 10px;
-        }
-
-        &:not(:last-child) {
-            border-bottom: none;
-        }
-
-        @media (max-width: 680px) {
-            border-right: none;
-        }
-
-        @media (max-width: 620px) {
-            border-left: 1px solid black;
-            border-right: 1px solid black;
-        }
-
-        @media (min-width: 779px) {
-            border-right: none;
-        }
-    }
-}
-
-.products__element-third {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-
-    & .products__item {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        font-size: 14px;
-
-        padding: 20px 10px;
-        border: 1px solid black;
-
-        & img {
-            width: 2rem;
-        }
-
-        &:first-child {
-            padding: 13px 10px;
-        }
-
-        &:not(:last-child) {
-            border-bottom: none;
-        }
+    &.--bg-none {
+        border: none;
     }
 }
 
@@ -137,6 +62,7 @@
 
 .products__bottom {
     display: flex;
+
     & button {
         padding: 4px 10px;
         border: 1px solid black;
