--- a/css/component/_ar-imagine.css
+++ b/css/component/_ar-imagine.css
@@ -1,21 +1,21 @@
 .ar-imagine {
-    display: flex;
-    flex-direction: row wrap;
-    flex-wrap: wrap;
-    min-width: 100%;
     margin-bottom: 5rem;
 
-    @media (max-width: 920px) {
-        flex-direction: column;
+    & .container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem 2rem;
+    
+        @media (max-width: 920px) {
+            flex-direction: column;
+        }
     }
 }
 
-.ar-imagine__info {
+.ar-imagine__col {
     display: flex;
     flex-flow: column;
-    padding: 0 10px 0 0;
-    margin-bottom: 24px;
-    width: 50%;
+    flex: 1;
 
     @media (max-width: 920px) {
         width: 100%;
@@ -87,17 +87,6 @@
 
     &:hover {
         text-decoration: underline #5f60ff;
-    }
-}
-
-.ar-imagine__card {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    padding-left: 2rem;
-
-    @media (max-width: 920px) {
-        width: 100%;
     }
 }
 
