--- a/css/component/_header.css
+++ b/css/component/_header.css
@@ -13,13 +13,21 @@
     & .header__left {
         display: flex;
         align-items: center;
-        width: 100%;
+        min-width: 100%;
     }
 
     & .header__logo-company {
         width: 9rem;
         height: 100%;
         margin-right: 1rem;
+
+        @media (max-width: 380px) {
+            width: 6rem;
+        }
+
+        @media (max-width: 320px) {
+            width: 5rem;
+        }
     }
 }
 
@@ -27,8 +35,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    flex-grow: 1;
     gap: 10px;
-    width: 100%;
 
     & .header__search {
         display: inline-flex;
@@ -76,11 +84,22 @@
                     border-radius: 5px;
                 }
             }
+
+            @media (max-width: 500px) {
+                margin: 0;
+            }
         }
 
         @media (min-width: 925px) {
             order: -1;
             margin: auto auto auto 0;
+        }
+    }
+
+    @media (max-width: 420px) {
+        gap: 0;
+        & span {
+            font-size: 18px !important;
         }
     }
 }
