--- a/css/component/_products.css
+++ b/css/component/_products.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: column;
     min-width: 100%;
-    margin: 0 24px 5rem 24px;
+    margin-bottom:  5rem;
 }
 
 .products__top {
@@ -62,6 +62,8 @@
 
 .products__bottom {
     display: flex;
+    justify-content: space-between;
+    gap: 1rem;
 
     & button {
         padding: 4px 10px;
@@ -75,14 +77,24 @@
             transition: all 0.3s ease-in-out;
         }
     }
+
+    @media (max-width: 720px) {
+        flex-flow: column-reverse;
+    }
 }
 
 .products__bottom-right {
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: center;
-    gap: 24px;
-    margin: auto 0 auto auto;
+    gap: 1rem;
+
+    @media (max-width: 450px) {
+        flex-flow: row wrap;
+        gap: 12px;
+        :first-child {
+            flex: 1 1 100%;
+        }
+    }
 }
 
 .products__bottom-element {
