--- a/css/style.css
+++ b/css/style.css
@@ -51,17 +51,18 @@ body {
 
 .container {
     position: relative;
-    min-width: 1440px;
+
+    max-width: 1440px;
+    width: 100%;
+    /* width: min(var(--container-size, 1440px) 100%); */
+
     margin: 0 auto;
     padding: 0 24px;
 
-    &.--faq {
+     @media (max-width: 1440px) {
         max-width: 1200px;
     }
-
-    @media (max-width: 1440px) {
-        min-width: 1200px;
-    }
+    /*
 
     @media (max-width: 1200px) {
         min-width: 920px;
@@ -77,7 +78,7 @@ body {
     
     @media (max-width: 620px) {
         min-width: 420px;
-    }
+    } */
 }
 
 .video {
