--- a/css/component/_autodesk-widget.css
+++ b/css/component/_autodesk-widget.css
@@ -158,18 +158,19 @@
 
     display: flex;
     flex-direction: column;
-    flex: 3;
 
     padding: 20px;
+
     height: 490px;
     width: 100%;
+
     background-color: #f9f9f9;
     overflow-y: auto;
     overflow-x: hidden;
 
-    /* @media (max-width: 730px) {
+    @media (max-width: 730px) {
         height: 100%;
-    } */
+    }
 }
 
 .content__card {
