--- a/css/component/_fonts.css
+++ b/css/component/_fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'markfont';
-  src:  url('../../fonts/markfont.eot?3j267n');
-  src:  url('../../fonts/markfont.eot?3j267n#iefix') format('embedded-opentype'),
-    url('../../fonts/markfont.ttf?3j267n') format('truetype'),
-    url('../../fonts/markfont.woff?3j267n') format('woff'),
-    url('../../fonts/markfont.svg?3j267n#markfont') format('svg');
+  src:  url('../../fonts/markfont.eot?v7o34i');
+  src:  url('../../fonts/markfont.eot?v7o34i#iefix') format('embedded-opentype'),
+    url('../../fonts/markfont.ttf?v7o34i') format('truetype'),
+    url('../../fonts/markfont.woff?v7o34i') format('woff'),
+    url('../../fonts/markfont.svg?v7o34i#markfont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -13,6 +13,7 @@
 [class^="ari-"], [class*=" ari-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'markfont' !important;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -24,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ari-arrow-down:before {
+  content: "\e920";
+}
 .ari-fullscreen:before {
   content: "\e91f";
 }
