--- a/css/component/_resources.css
+++ b/css/component/_resources.css
@@ -14,6 +14,10 @@
         &:hover {
             text-decoration: underline 2px #5f60ff;
         }
+
+        @media (max-width: 770px) {
+            display: none;
+        }
     }
 }
 
