--- a/css/component/_au-assi.css
+++ b/css/component/_au-assi.css
@@ -34,7 +34,7 @@
     & svg {
         width: 50px;
         height: 50px;
-        color: white;
+        color: var(--color-light);
         aspect-ratio: 1;
     }
 }
@@ -43,8 +43,8 @@
     margin-right: 24px;
     padding: 24px;
     border-radius: 10px 10px 0 10px;
-    box-shadow: -1px 2px 1px 4px black;
-    background-color: rgb(255, 255, 255);
+    box-shadow: -1px 2px 1px 4px var(--color-black);
+    background-color: var(--color-light);
 
     animation: fadeInUp 1s ease-in-out;
 
