--- a/css/component/_dialog.css
+++ b/css/component/_dialog.css
@@ -14,7 +14,7 @@
     box-shadow: 0 0 5px 0;
     z-index: 1000;
 
-    background-color: white;
+    background-color: var(--color-light);
 }
 
 .basket[open] {
@@ -32,7 +32,7 @@
     flex: 1 1;
     z-index: 1;
     bottom: 0;
-    background-color: white;
+    background-color: var(--color-light);
 }
 
 .basket__top-cart {
@@ -54,7 +54,7 @@
     padding: 3px 3px 0 3px;
 
     & span {
-        color: black;
+        color: var(--color-black);
         font-weight: bold;
     }
 }
@@ -131,7 +131,7 @@
         text-decoration: underline;
 
         &:hover {
-            text-decoration: underline #5f60ff;
+            text-decoration: underline var(--color-blue-violet);
         }
     }
 }
@@ -141,7 +141,7 @@
     padding: 20px;
     bottom: 0;
     border-top: 1px solid rgb(202, 202, 202);
-    background-color: white;
+    background-color: var(--color-light);
 }
 
 .basket__footer {
@@ -174,9 +174,9 @@
     margin-bottom: 10px;
 
     font-weight: 600;
-    color: white;
+    color: var(--color-light);
 
-    background-color: black;
+    background-color: var(--color-black);
 }
 
 .basket__footer-bottom {
