--- a/css/component/_faq.css
+++ b/css/component/_faq.css
@@ -11,7 +11,7 @@
     text-decoration: underline;
 
     &:hover {
-        text-decoration: underline 2px #5f60ff; 
+        text-decoration: underline 2px var(--color-blue-violet); 
     }
 }
 
@@ -71,7 +71,7 @@
 }
 
 .faq__title {
-    color: black;
+    color: var(--color-black);
     font-size: 1rem;
     font-weight: 600;
     line-height: 1.25;
@@ -151,7 +151,7 @@
     text-decoration: underline 2px;
 
     &:hover {
-        text-decoration: underline 2px #5f60ff; 
+        text-decoration: underline 2px var(--color-blue-violet); 
     }
 }
 
