--- a/css/component/_resources.css
+++ b/css/component/_resources.css
@@ -12,7 +12,7 @@
 
     & a {
         &:hover {
-            text-decoration: underline 2px #5f60ff;
+            text-decoration: underline 2px var(--color-blue-violet);
         }
 
         @media (max-width: 770px) {
@@ -103,7 +103,7 @@
     margin: 1rem 0;
     height: 0.5px;
     width: 100%;
-    background-color: black;
+    background-color: var(--color-black);
     opacity: 0.2;
 }
 
@@ -118,7 +118,7 @@
         gap: 10px;
 
         &:hover {
-            text-decoration: underline 2px #5f60ff;
+            text-decoration: underline 2px var(--color-blue-violet);
         }
     }
 }
