--- a/css/core/_base.css
+++ b/css/core/_base.css
@@ -14,7 +14,7 @@ button {
 }
 
 a {
-    color: rgb(0, 0, 0);
+    color: var(--color-black);
     text-decoration: none;
 }
 
@@ -28,7 +28,7 @@ body {
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--color-light);
 }
 
 .container {
