--- a/css/components/_local-storage.css
+++ b/css/components/_local-storage.css
@@ -57,27 +57,48 @@
     gap: 24px;
 }
 
-.add-stor, .add-all {
-    margin-top: 2rem;
+.clear-store, .add-store {
+    margin: 2rem 0;
     padding: 5px 20px;
     background-color: #6E44FF;
     border-radius: 10px;
     cursor: pointer;
     transition: scale 0.2s linear;
+    
+    &.--small {
+        position: relative;
+        display: inline-flex;
+        gap: 5px;
+        margin: 0;
+        background-color: #9b31ff;
+        font-size: 12px;
+
+        &::before {
+            content: '';
+            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1024 1024' version='1.1' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M679.2 344.9c-11.7-11.7-30.7-11.7-42.4 0L512 469.7 387.2 344.9c-11.7-11.7-30.7-11.7-42.4 0s-11.7 30.7 0 42.4l124.8 124.8-124.5 124.5c-11.7 11.7-11.7 30.7 0 42.4 5.9 5.9 13.5 8.8 21.2 8.8s15.4-2.9 21.2-8.8L512 554.6l124.5 124.5c5.9 5.9 13.5 8.8 21.2 8.8s15.4-2.9 21.2-8.8c11.7-11.7 11.7-30.7 0-42.4L554.4 512.1l124.8-124.8c11.7-11.7 11.7-30.7 0-42.4z' /%3E%3Cpath d='M846.5 370.7c-18.3-43.2-44.5-82-77.8-115.4-33.3-33.3-72.1-59.5-115.4-77.8C608.5 158.6 561 149 512 149s-96.5 9.6-141.3 28.5c-43.2 18.3-82 44.5-115.4 77.8-33.3 33.3-59.5 72.1-77.8 115.4C158.6 415.5 149 463 149 512s9.6 96.5 28.5 141.3c18.3 43.2 44.5 82 77.8 115.4 33.3 33.3 72.1 59.5 115.4 77.8C415.5 865.4 463 875 512 875s96.5-9.6 141.3-28.5c43.2-18.3 82-44.5 115.4-77.8 33.3-33.3 59.5-72.1 77.8-115.4C865.4 608.5 875 561 875 512s-9.6-96.5-28.5-141.3zM512 815c-167.1 0-303-135.9-303-303s135.9-303 303-303 303 135.9 303 303-135.9 303-303 303z' /%3E%3C/svg%3E");
+            width: 16px;
+            height: 16px;
+            stroke: white;
+        }
+    }
 
     &:hover {
         scale: 1.1;
     }
 }
 
-.clear-store {
-    padding: 4px 20px;
-    border-radius: 10px;
-    background-color: #00AEEF;
-    cursor: pointer;
-    transition: scale 0.2s linear;
+.local-storage__item {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 24px;
+    max-width: 600px;
+    border: 2px solid white;
 
-    &:hover {
-        scale: 1.15;
+    &:empty::before {
+        content: "Store is cleand";
+        font-size: 16px;
+        color: white;
     }
 }
