--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 /* components */
 @import url('./component/_buy-component.css');
+@import url('./component/_loader.css');
 @import url('./component/_resources.css');
 @import url('./component/_select-term.css');
 @import url('./component/_header.css');
