--- a/css/core/_base.css
+++ b/css/core/_base.css
@@ -21,6 +21,10 @@ a {
 html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+
+    &.--add-scroll {
+        overflow: hidden;
+    }
 }
 
 body {
