--- a/css/core/_icons.css
+++ b/css/core/_icons.css
@@ -1,127 +1,132 @@
 @font-face {
-    font-family: 'markfont';
-    src:  url('../../fonts/markfont.eot?v7o34i');
-    src:  url('../../fonts/markfont.eot?v7o34i#iefix') format('embedded-opentype'),
-      url('../../fonts/markfont.ttf?v7o34i') format('truetype'),
-      url('../../fonts/markfont.woff?v7o34i') format('woff'),
-      url('../../fonts/markfont.svg?v7o34i#markfont') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
-  
-  [class^="ari-"], [class*=" ari-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'markfont' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-  
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .ari-arrow-down:before {
-    content: "\e920";
-  }
-  .ari-fullscreen:before {
-    content: "\e91f";
-  }
-  .ari-block:before {
-    content: "\e91e";
-  }
-  .ari-iconchat:before {
-    content: "\e91d";
-  }
-  .ari-send:before {
-    content: "\e91c";
-  }
-  .ari-download:before {
-    content: "\e91b";
-  }
-  .ari-chat:before {
-    content: "\e91a";
-  }
-  .ari-facebook-circle:before {
-    content: "\e915";
-  }
-  .ari-instagram-circle:before {
-    content: "\e916";
-  }
-  .ari-twitter-circle:before {
-    content: "\e917";
-  }
-  .ari-linkedin-circle:before {
-    content: "\e918";
-  }
-  .ari-youtube:before {
-    content: "\e919";
-  }
-  .ari-play:before {
-    content: "\e912";
-  }
-  .ari-arrowright:before {
-    content: "\e913";
-  }
-  .ari-winsvg:before {
-    content: "\e914";
-  }
-  .ari-minus:before {
-    content: "\e910";
-  }
-  .ari-pluse:before {
-    content: "\e911";
-  }
-  .ari-searh:before {
-    content: "\e90f";
-  }
-  .ari-Access:before {
-    content: "\e900";
-  }
-  .ari-arrow:before {
-    content: "\e901";
-  }
-  .ari-basket:before {
-    content: "\e902";
-  }
-  .ari-buy:before {
-    content: "\e903";
-  }
-  .ari-buy-component-footer-first:before {
-    content: "\e904";
-  }
-  .ari-buy-with-flex:before {
-    content: "\e905";
-  }
-  .ari-close:before {
-    content: "\e906";
-  }
-  .ari-lang:before {
-    content: "\e907";
-  }
-  .ari-lock-your-price:before {
-    content: "\e908";
-  }
-  .ari-pay-flex:before {
-    content: "\e909";
-  }
-  .ari-people:before {
-    content: "\e90a";
-  }
-  .ari-revit-cost:before {
-    content: "\e90b";
-  }
-  .ari-see-more:before {
-    content: "\e90c";
-  }
-  .ari-star:before {
-    content: "\e90d";
-  }
-  .ari-usage:before {
-    content: "\e90e";
-  }
-  
+  font-family: 'markfont';
+  src:  url('../../fonts/markfont.eot?olizv9');
+  src:  url('../../fonts/markfont.eot?olizv9#iefix') format('embedded-opentype'),
+    url('../../fonts/markfont.ttf?olizv9') format('truetype'),
+    url('../../fonts/markfont.woff?olizv9') format('woff'),
+    url('../../fonts/markfont.svg?olizv9#markfont') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="ari-"], [class*=" ari-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'markfont' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.ari-minimize1:before {
+  content: "\e921";
+}
+.ari-full-screen:before {
+  content: "\e923";
+}
+.ari-arrow-down:before {
+  content: "\e920";
+}
+.ari-fullscreen:before {
+  content: "\e91f";
+}
+.ari-block:before {
+  content: "\e91e";
+}
+.ari-iconchat:before {
+  content: "\e91d";
+}
+.ari-send:before {
+  content: "\e91c";
+}
+.ari-download:before {
+  content: "\e91b";
+}
+.ari-chat:before {
+  content: "\e91a";
+}
+.ari-facebook-circle:before {
+  content: "\e915";
+}
+.ari-instagram-circle:before {
+  content: "\e916";
+}
+.ari-twitter-circle:before {
+  content: "\e917";
+}
+.ari-linkedin-circle:before {
+  content: "\e918";
+}
+.ari-youtube:before {
+  content: "\e919";
+}
+.ari-play:before {
+  content: "\e912";
+}
+.ari-arrowright:before {
+  content: "\e913";
+}
+.ari-winsvg:before {
+  content: "\e914";
+}
+.ari-minus:before {
+  content: "\e910";
+}
+.ari-pluse:before {
+  content: "\e911";
+}
+.ari-searh:before {
+  content: "\e90f";
+}
+.ari-Access:before {
+  content: "\e900";
+}
+.ari-arrow:before {
+  content: "\e901";
+}
+.ari-basket:before {
+  content: "\e902";
+}
+.ari-buy:before {
+  content: "\e903";
+}
+.ari-buy-component-footer-first:before {
+  content: "\e904";
+}
+.ari-buy-with-flex:before {
+  content: "\e905";
+}
+.ari-close:before {
+  content: "\e906";
+}
+.ari-lang:before {
+  content: "\e907";
+}
+.ari-lock-your-price:before {
+  content: "\e908";
+}
+.ari-pay-flex:before {
+  content: "\e909";
+}
+.ari-people:before {
+  content: "\e90a";
+}
+.ari-revit-cost:before {
+  content: "\e90b";
+}
+.ari-see-more:before {
+  content: "\e90c";
+}
+.ari-star:before {
+  content: "\e90d";
+}
+.ari-usage:before {
+  content: "\e90e";
+}
